--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,17 @@ documentation = "https://docs.rs/atsam4lc8c"
 categories = ["embedded", "hardware-support"]
 
 [dependencies]
-bare-metal = "0.2"
-cortex-m = "0.5"
+bare-metal = "0.2.0"
+cortex-m = "0.5.0"
 vcell = "0.1"
 
 [dependencies.cortex-m-rt]
 optional = true
-version = "0.5"
+version = "0.5.0"
+
+[dev-dependencies]
+cortex-m-rt = "0.5.0"
+cortex-m-semihosting = "0.3.0"
 
 [features]
 rt = ["cortex-m-rt/device"]
