--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ version = "0.5.0"
 [dev-dependencies]
 cortex-m-rt = "0.5.0"
 cortex-m-semihosting = "0.3.0"
+panic-semihosting = "0.2.0"
 
 [features]
 rt = ["cortex-m-rt/device"]
