--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ version = "0.5.0"
 cortex-m-rt = "0.5.0"
 cortex-m-semihosting = "0.3.0"
 panic-semihosting = "0.2.0"
+cortex-m-log = { version = "0.2.0", features = ["semihosting"] }
 
 [features]
 rt = ["cortex-m-rt/device"]
