add target in before_script

--- a/.cargo/config
+++ b/.cargo/config
@@ -2,6 +2,7 @@
 target = "thumbv7em-none-eabihf"
 rustflags = [
   "-C", "link-arg=-Tlink.x",
-  "-C", "linker=arm-none-eabi-ld",
-  "-Z", "linker-flavor=ld",
+  "-C", "linker=lld",
+  "-Z", "linker-flavor=ld.lld",
+  "-Z", "thinlto=no",
 ]
