don't do test, just build

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ sudo: required
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -qq gcc-arm-none-eabi binutils-arm-none-eabi
-before_script:
+script:
     - rustup target add thumbv7em-none-eabihf
+    - cargo build --verbose --examples
